# weather_task

./: .gitignore  Cargo.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
weather-cli/: Cargo.toml
weather-cli/src/: cli.rs  main.rs
weather-core/: Cargo.toml
weather-core/src/: config.rs  lib.rs  model.rs  provider.rs
weather-core/src/provider/: openweather.rs  weatherapi.rs
