[package]
name = "weather-cli"
version = "0.1.0"
description = "Command-line interface for weather app"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
inquire = "0.7"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

weather-core = { path = "../weather-core" }

tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lints.clippy]
all = "warn"

