[package]
name = "weather-core"
version = "0.1.0"
description = "Core logic for weather CLI"
edition = "2024"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
toml = "0.8"
async-trait = "0.1"

# https://rust-lang.github.io/rust-clippy/master/index.html#lint-groups
# https://rust-lang.github.io/rust-clippy/master/#configuration
[lints.clippy]
all = "warn"
# pedantic = "warn"
# nursery = "warn"
